--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "algoliasearch": "^4.5.1",
     "bootstrap": "^4.5.2",
     "google-map-react": "^2.1.8",
+    "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-instantsearch-dom": "^6.7.0",
     "react-instantsearch-dom-maps": "^6.7.0",
+    "react-moment": "^1.0.0",
     "react-rating-stars-component": "^2.2.0",
     "react-scripts": "3.4.3"
   },
