--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-instantsearch-dom": "^6.7.0",
     "react-instantsearch-dom-maps": "^6.7.0",
     "react-moment": "^1.0.0",
