--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "algoliasearch": "^4.5.1",
     "bootstrap": "^4.5.2",
     "google-map-react": "^2.1.8",
+    "gulp-sass": "^4.1.0",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
